--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,8 @@ jobs:
           name: Run tests
           command: |
             TESTFILES=$(circleci tests glob "src/**/*.spec.js" "src/**/*.test.js" | circleci tests split --split-by=timings)
-            CI=true npm run test:ci -- --maxWorkers=6 $TESTFILES
+            CI=true npm run test:ci -- --maxWorkers=2 $TESTFILES
+          # Set maxWorkers to reflect the number of cores on the Resource Class running this task.
           environment:
             JEST_JUNIT_OUTPUT_DIR: ./reports/junit/
       - store_test_results:
