fix storybook warning and a test

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "eject": "react-scripts eject",
     "lint": "npx eslint --fix --no-ignore --max-warnings=-1 -c .eslintrc.json 'src/**/*.{js,jsx,ts,tsx,json}'",
     "storybook": "start-storybook -p 6006 -s public --no-dll",
-    "build-storybook": "build-storybook -s public --no-dll",
+    "build-storybook": "build-storybook -s public",
     "chromatic": "npx chromatic --exit-zero-on-changes -ci",
     "format-staged": "npx prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}'",
     "postinstall": "husky install",
