--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@stripe/react-stripe-js": "^1.7.2",
     "@stripe/stripe-js": "^1.25.0",
     "@tailwindcss/line-clamp": "^0.4.0",
+    "@tanstack/react-table": "^8.1.3",
     "classnames": "^2.3.1",
     "d3": "^7.6.1",
     "date-fns": "^2.28.0",
@@ -30,7 +31,6 @@
     "react-modal": "^3.14.4",
     "react-query": "3.39",
     "react-router-dom": "^5.2.1",
-    "react-table": "^7.7.0",
     "react-use": "^17.2.4",
     "victory": "^36.3.1",
     "web-vitals": "^2.1.4",
