--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -50,6 +50,7 @@ jobs:
         env:
           BUILD_ENV: production
           DEPLOY_ENV: enterprise
+          IS_ENTERPRISE: true
           NPM_TOKEN: ${{ secrets.RELEASE_GITHUB_TOKEN }}
         run: |-
           make build
@@ -62,9 +63,10 @@ jobs:
         run: |-
           make push
 
-      - name: Publish
+      - name: Publish Enterprise
         env:
           BUILD_ENV: production
+          IS_ENTERPRISE: true
           DEPLOY_ENV: enterprise
         run: |-
           make push
