--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@stripe/react-stripe-js": "^1.7.2",
     "@stripe/stripe-js": "^1.25.0",
     "@tailwindcss/line-clamp": "^0.4.0",
+    "@tanstack/react-query": "^4.1.3",
     "@tanstack/react-table": "^8.1.3",
     "classnames": "^2.3.1",
     "d3": "^7.6.1",
