--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@stripe/stripe-js": "^1.25.0",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tanstack/react-query": "^4.1.3",
+    "@tanstack/react-query-devtools": "^4.2.1",
     "@tanstack/react-table": "^8.1.3",
     "classnames": "^2.3.1",
     "d3": "^7.6.1",
@@ -30,7 +31,6 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.28.1",
     "react-modal": "^3.14.4",
-    "react-query": "3.39",
     "react-router-dom": "^5.2.1",
     "react-use": "^17.2.4",
     "victory": "^36.3.1",
