Lock in timezone differences between CI/CD and a developers local machine when running the test suite. This might fix a yearly issue with the billing tests too

--- a/package.json
+++ b/package.json
@@ -112,7 +112,8 @@
   "jest": {
     "transformIgnorePatterns": [
       "<rootDir>/node_modules/(?!d3)/"
-    ]
+    ],
+    "globalSetup": "./src/setupTestGlobal.js"
   },
   "msw": {
     "workerDirectory": "public"
