Update test lint rules for the React 18 migration.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,12 @@
     "testing-library/no-unnecessary-act": "warn",
     "testing-library/await-async-utils": "warn",
     "testing-library/prefer-find-by": "warn",
+    "testing-library/await-fire-event": "warn",
+    "testing-library/no-global-regexp-flag-in-query": "warn",
+    "testing-library/no-manual-cleanup": "warn",
+    "testing-library/prefer-user-event": "warn",
+    "testing-library/prefer-wait-for": "warn",
+    "testing-library/prefer-explicit-assert": "warn",
     "complexity": ["error", 5],
     "max-statements": ["error", 10],
     "max-nested-callbacks": ["error", 2],
