Ensure gazebo will work if missing harness env / on self hosted

--- a/.env.development
+++ b/.env.development
@@ -5,3 +5,4 @@ REACT_APP_MARKETING_BASE_URL=https://about.codecov.io
 REACT_APP_SEGMENT_KEY=$SEGMENT_KEY
 REACT_APP_LAUNCHDARKLY=60f9b3cf32beb9244b10f3d0
 REACT_APP_BAREMETRICS_TOKEN=d8170427-c4d4-4292-8b35-b8b6978e6d1e
+REACT_APP_HARNESS=f53df992-f375-49f4-aeae-8301fd1b33be
