--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
   ignore = "git log -1 --pretty=%B | grep dependabot"
 
 [context.deploy-preview]
-  environment = { REACT_APP_API_URL = "https://stage-api.codecov.dev", REACT_APP_STRIPE_KEY="pk_test_d3lcWjpwF96baLX9ShZfMcq4", REACT_APP_BASE_URL="https://stage-web.codecov.dev", REACT_APP_LAUNCHDARKLY="60f9b3cf32beb9244b10f3d0" }
+  environment = { REACT_APP_API_URL = "https://stage-api.codecov.dev", REACT_APP_STRIPE_KEY="pk_test_d3lcWjpwF96baLX9ShZfMcq4", REACT_APP_BASE_URL="https://stage-web.codecov.dev", REACT_APP_LAUNCHDARKLY="60f9b3cf32beb9244b10f3d0", REACT_APP_HARNESS="f53df992-f375-49f4-aeae-8301fd1b33be" }
 
 [[headers]]
   for = "/*"
