--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.28.1",
+    "react-intersection-observer": "^9.4.1",
     "react-modal": "^3.14.4",
     "react-router-dom": "^5.2.1",
     "react-use": "^17.2.4",
