Makes coverage tab chart reusable and updates both coverage tab and analytics chart to it. Updates local coverage reports to not include stories.

--- a/package.json
+++ b/package.json
@@ -118,6 +118,10 @@
     "transformIgnorePatterns": [
       "<rootDir>/node_modules/(?!d3)/"
     ],
+    "collectCoverageFrom": [
+      "!src/**/*.stories.js",
+      "!src/**/*.stories.jsx"
+    ],
     "globalSetup": "./src/setupTestGlobal.js"
   },
   "msw": {
