--- a/package.json
+++ b/package.json
@@ -16,7 +16,14 @@
     "@tanstack/react-query-devtools": "^4.2.1",
     "@tanstack/react-table": "^8.1.3",
     "classnames": "^2.3.1",
-    "d3": "^7.6.1",
+    "d3-array": "^3.2.1",
+    "d3-format": "^3.1.0",
+    "d3-hierarchy": "^3.1.2",
+    "d3-interpolate": "^3.0.1",
+    "d3-scale": "^4.0.2",
+    "d3-selection": "^3.0.0",
+    "d3-shape": "^3.2.0",
+    "d3-transition": "^3.0.1",
     "date-fns": "^2.29.3",
     "date-fns-tz": "^1.3.4",
     "dompurify": "^2.3.8",
