--- a/package.json
+++ b/package.json
@@ -56,11 +56,11 @@
     "sentry": "export REACT_APP_SENTRY_RELEASE=\"$(git rev-parse --short HEAD)\" && react-scripts build && node scripts/sentry.js",
     "test:ci": "react-scripts test --collectCoverage --reporters=default --reporters=jest-junit",
     "eject": "react-scripts eject",
-    "lint": "npx eslint --fix --no-ignore --max-warnings=-1 -c .eslintrc.json 'src/**/*.{js,jsx,ts,tsx,json}'",
+    "lint": "npx eslint --fix --no-ignore --max-warnings=-1 -c .eslintrc.json 'src/**/*.{js,jsx,ts,tsx}'",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
     "chromatic": "npx chromatic --exit-zero-on-changes -ci",
-    "format-staged": "npx prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}'",
+    "format-staged": "npx prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md}'",
     "postinstall": "husky install",
     "generate-icons": "node ./scripts/icons.js"
   },
