setup tailwind rule to respect our custom classes (ex text-ds-pink)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -127,6 +127,24 @@
         },
         "newlines-between": "always"
       }
+    ],
+    "tailwindcss/no-custom-classname": [
+      "warn",
+      {
+        "callees": ["classnames", "clsx", "ctl"],
+        "config": "tailwind.config.js",
+        "cssFiles": [
+          "**/*.css",
+          "!**/node_modules",
+          "!**/.*",
+          "!**/dist",
+          "!**/build"
+        ],
+        "cssFilesRefreshRate": 5000,
+        "skipClassAttribute": false,
+        "tags": [],
+        "whitelist": []
+      }
     ]
   },
   "overrides": [
