--- a/package.json
+++ b/package.json
@@ -43,16 +43,17 @@
     "react-use": "^17.2.4",
     "victory": "^36.3.1",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zod": "^3.20.6"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "export REACT_APP_SENTRY_RELEASE=\"$(git rev-parse --short HEAD)\" && react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "export REACT_APP_SENTRY_RELEASE=\"$(git rev-parse --short HEAD)\" && craco build",
+    "test": "craco test",
     "test:mutation": "npx stryker run",
-    "sentry": "export REACT_APP_SENTRY_RELEASE=\"$(git rev-parse --short HEAD)\" && react-scripts build && node scripts/sentry.js",
-    "test:ci": "react-scripts test --collectCoverage --reporters=default --reporters=jest-junit",
-    "eject": "react-scripts eject",
+    "sentry": "export REACT_APP_SENTRY_RELEASE=\"$(git rev-parse --short HEAD)\" && craco build && node scripts/sentry.js",
+    "test:ci": "craco test --collectCoverage --reporters=default --reporters=jest-junit",
+    "eject": "craco eject",
     "lint": "npx eslint --fix --no-ignore --max-warnings=-1 -c .eslintrc.json 'src/**/*.{js,jsx,ts,tsx}'",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
@@ -91,6 +92,8 @@
     "@storybook/builder-webpack5": "^6.5.16",
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/node-logger": "^6.5.16",
+    "@babel/preset-typescript": "^7.21.0",
+    "@craco/craco": "^7.0.0",
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.16",
     "@stryker-mutator/core": "^5.6.1",
@@ -102,6 +105,10 @@
     "@testing-library/react": "^12.1.5",
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.14.2",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "autoprefixer": "^10.4.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -112,12 +119,13 @@
     "husky": "^7.0.4",
     "jest-junit": "^13.0.0",
     "lint-staged": "^13.0.3",
-    "msw": "^0.47.3",
+    "msw": "^1.1.0",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
     "react-scripts": "^5.0.1",
     "react-test-renderer": "^17.0.2",
     "tailwindcss": "^3.0.24",
+    "typescript": "^4.9.5",
     "webpack": "^5.70.0"
   },
   "engines": {
