--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@stripe/stripe-js": "^1.25.0",
     "@tanstack/react-query": "^4.1.3",
     "@tanstack/react-table": "^8.1.3",
+    "@types/react-router-dom": "^5.3.3",
     "classnames": "^2.3.1",
     "d3-array": "^3.2.1",
     "d3-format": "^3.1.0",
@@ -84,6 +85,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
+    "@babel/preset-typescript": "^7.21.0",
+    "@craco/craco": "^7.0.0",
     "@sentry/cli": "^2.13.0",
     "@storybook/addon-a11y": "^6.5.16",
     "@storybook/addon-actions": "^6.5.16",
@@ -92,8 +95,6 @@
     "@storybook/builder-webpack5": "^6.5.16",
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/node-logger": "^6.5.16",
-    "@babel/preset-typescript": "^7.21.0",
-    "@craco/craco": "^7.0.0",
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.16",
     "@stryker-mutator/core": "^5.6.1",
