--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "chromatic": "npx chromatic --exit-zero-on-changes -ci",
     "format-staged": "npx prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md}'",
     "postinstall": "husky install",
-    "generate-icons": "node ./scripts/icons.js"
+    "generate-icons": "node ./scripts/icons.js",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css,scss,md,json}": [
@@ -125,6 +126,7 @@
     "prettier": "^2.6.2",
     "react-scripts": "^5.0.1",
     "react-test-renderer": "^17.0.2",
+    "source-map-explorer": "^2.5.3",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.9.5",
     "webpack": "^5.70.0"
