add more resources to the sentry step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,6 +60,7 @@ jobs:
   sentry:
     docker:
       - image: cimg/node:18.8.0
+    resource_class: large
     steps:
       - checkout
       - restore_cache:
