add more resources to storybook step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,6 +85,7 @@ jobs:
   storybook:
     docker:
       - image: cimg/node:18.8.0
+    resource_class: large
     steps:
       - checkout
       - restore_cache:
