--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -128,6 +128,9 @@ workflows:
           requires:
             - install
       - sentry:
+          filters:
+            branches:
+              only: /main/
           requires:
             - install
       - fossa:
