CODE-2874: What's This TypeScript Stuff All About? (#1928)
* get everything playing nicely

* some progress?

* update PullsTab tests

* add react-router-dom types

* move useUsers and useUpdateUser hook into their own test

* fix up tests and move into their own files

* fix up useSlefActivationMutation.spec

* remove old_ui select

* remove old combined hooks test file

* create new test files

* fix up useRepos

* clean up admin access table

* fix up list repo

* fix up useSelfHostedUserList

* fix up MemberList.spec

* fix up CommitsTabs.spec

* update CharSelectors.spec.js

* fix up MultiSelect.spec

* update DefaultBranch.spec

* update MembersTable.spec

* fix up Select.spec.js

* update MembersList.spec

* fix up services/access specs

* remove ControlGroup component

* add bundle analyzer

* fix lodash imports

* update non-breaking change packages

* add more resources to the sentry step

* add more resources to storybook step

* only run sentry job on main branch:

* switch resources down to medium+

* finish up tests

* clean up useRepoConfig a little tiny bit

* allow undefined fields to be returned from api

* add test for useIsCurrentUserAnAdmin

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,6 +60,7 @@ jobs:
   sentry:
     docker:
       - image: cimg/node:18.8.0
+    resource_class: medium+
     steps:
       - checkout
       - restore_cache:
@@ -84,6 +85,7 @@ jobs:
   storybook:
     docker:
       - image: cimg/node:18.8.0
+    resource_class: medium+
     steps:
       - checkout
       - restore_cache:
@@ -126,6 +128,9 @@ workflows:
           requires:
             - install
       - sentry:
+          filters:
+            branches:
+              only: /main/
           requires:
             - install
       - fossa:
