--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "dependencies": {
     "@hookform/resolvers": "^2.8.5",
     "@reach/menu-button": "^0.18.0",
-    "@sentry/react": "^7.39.0",
-    "@sentry/replay": "^7.39.0",
-    "@sentry/tracing": "^7.39.0",
+    "@sentry/react": "^7.41.0",
+    "@sentry/replay": "^7.41.0",
+    "@sentry/tracing": "^7.41.0",
     "@stripe/react-stripe-js": "^1.7.2",
-    "@stripe/stripe-js": "^1.25.0",
-    "@tanstack/react-query": "^4.1.3",
+    "@stripe/stripe-js": "^1.48.0",
+    "@tanstack/react-query": "^4.26.1",
     "@tanstack/react-table": "^8.1.3",
+    "@types/react-router-dom": "^5.3.3",
     "classnames": "^2.3.1",
     "d3-array": "^3.2.1",
     "d3-format": "^3.1.0",
@@ -31,35 +32,37 @@
     "pluralize": "^8.0.0",
     "prism-react-renderer": "^1.3.1",
     "prop-types": "^15.8.1",
-    "qs": "^6.10.1",
+    "qs": "^6.11.1",
     "react": "^17.0.2",
     "react-ace": "^10.1.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.28.1",
+    "react-hook-form": "^7.43.5",
     "react-intersection-observer": "^9.4.1",
     "react-modal": "^3.14.4",
     "react-router-dom": "^5.2.1",
     "react-use": "^17.2.4",
     "victory": "^36.3.1",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zod": "^3.21.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "export REACT_APP_SENTRY_RELEASE=\"$(git rev-parse --short HEAD)\" && react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "export REACT_APP_SENTRY_RELEASE=\"$(git rev-parse --short HEAD)\" && craco build",
+    "test": "craco test",
     "test:mutation": "npx stryker run",
-    "sentry": "export REACT_APP_SENTRY_RELEASE=\"$(git rev-parse --short HEAD)\" && react-scripts build && node scripts/sentry.js",
-    "test:ci": "react-scripts test --collectCoverage --reporters=default --reporters=jest-junit",
-    "eject": "react-scripts eject",
+    "sentry": "export REACT_APP_SENTRY_RELEASE=\"$(git rev-parse --short HEAD)\" && craco build && node scripts/sentry.js",
+    "test:ci": "craco test --collectCoverage --reporters=default --reporters=jest-junit",
+    "eject": "craco eject",
     "lint": "npx eslint --fix --no-ignore --max-warnings=-1 -c .eslintrc.json 'src/**/*.{js,jsx,ts,tsx}'",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
     "chromatic": "npx chromatic --exit-zero-on-changes -ci",
     "format-staged": "npx prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md}'",
     "postinstall": "husky install",
-    "generate-icons": "node ./scripts/icons.js"
+    "generate-icons": "node ./scripts/icons.js",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css,scss,md,json}": [
@@ -83,7 +86,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
-    "@sentry/cli": "^2.13.0",
+    "@babel/preset-typescript": "^7.21.0",
+    "@craco/craco": "^7.0.0",
+    "@sentry/cli": "^2.14.4",
     "@storybook/addon-a11y": "^6.5.16",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
@@ -96,14 +101,18 @@
     "@stryker-mutator/core": "^5.6.1",
     "@stryker-mutator/jest-runner": "^5.6.1",
     "@tailwindcss/line-clamp": "^0.4.2",
-    "@tanstack/eslint-plugin-query": "^4.24.8",
-    "@tanstack/react-query-devtools": "^4.24.6",
+    "@tanstack/eslint-plugin-query": "^4.26.2",
+    "@tanstack/react-query-devtools": "^4.26.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.14.6",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "autoprefixer": "^10.4.4",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-prettier": "^8.7.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-tailwindcss": "^3.8.3",
@@ -112,12 +121,14 @@
     "husky": "^7.0.4",
     "jest-junit": "^13.0.0",
     "lint-staged": "^13.0.3",
-    "msw": "^0.47.3",
+    "msw": "^1.1.0",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
     "react-scripts": "^5.0.1",
     "react-test-renderer": "^17.0.2",
+    "source-map-explorer": "^2.5.3",
     "tailwindcss": "^3.0.24",
+    "typescript": "^4.9.5",
     "webpack": "^5.70.0"
   },
   "engines": {
