--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "@testing-library/react": "^12.1.5",
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
+    "@total-typescript/ts-reset": "^0.4.2",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.6",
     "@types/react": "^18.0.28",
