--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "@babel/core": "^7.17.8",
     "@babel/preset-typescript": "^7.21.0",
     "@craco/craco": "^7.0.0",
-    "@sentry/cli": "^2.14.4",
+    "@sentry/webpack-plugin": "^1.20.0",
     "@storybook/addon-a11y": "^6.5.16",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
