Remove old sentry env/commands, update codecov build settings, fix sourcemap path

--- a/codecov.yml
+++ b/codecov.yml
@@ -17,6 +17,7 @@ comment:
   require_changes: no
   require_base: no
   require_head: yes
+  after_n_builds: 6
 
 ignore:
   - ./src/**/*.stories.js
