--- a/package.json
+++ b/package.json
@@ -49,10 +49,9 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "export REACT_APP_SENTRY_RELEASE=\"$(git rev-parse --short HEAD)\" && craco build",
+    "build": "craco build",
     "test": "craco test",
     "test:mutation": "npx stryker run",
-    "sentry": "export REACT_APP_SENTRY_RELEASE=\"$(git rev-parse --short HEAD)\" && craco build && node scripts/sentry.js",
     "test:ci": "craco test --collectCoverage --reporters=default --reporters=jest-junit",
     "eject": "craco eject",
     "lint": "npx eslint --fix --no-ignore --max-warnings=-1 -c .eslintrc.json 'src/**/*.{js,jsx,ts,tsx}'",
