Sentry sourcemaps plz (#1943)
* Replace sentry circleci job + custom script with the webpack plugin to automatically sync sourcemaps with releases.

* Forgot to set org/project

* Remove old sentry env/commands, update codecov build settings, fix sourcemap path

--- a/package.json
+++ b/package.json
@@ -49,10 +49,9 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "export REACT_APP_SENTRY_RELEASE=\"$(git rev-parse --short HEAD)\" && craco build",
+    "build": "craco build",
     "test": "craco test",
     "test:mutation": "npx stryker run",
-    "sentry": "export REACT_APP_SENTRY_RELEASE=\"$(git rev-parse --short HEAD)\" && craco build && node scripts/sentry.js",
     "test:ci": "craco test --collectCoverage --reporters=default --reporters=jest-junit",
     "eject": "craco eject",
     "lint": "npx eslint --fix --no-ignore --max-warnings=-1 -c .eslintrc.json 'src/**/*.{js,jsx,ts,tsx}'",
@@ -89,7 +88,7 @@
     "@babel/core": "^7.17.8",
     "@babel/preset-typescript": "^7.21.0",
     "@craco/craco": "^7.0.0",
-    "@sentry/cli": "^2.14.4",
+    "@sentry/webpack-plugin": "^1.20.0",
     "@storybook/addon-a11y": "^6.5.16",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
