--- a/.env.production
+++ b/.env.production
@@ -3,3 +3,4 @@ REACT_APP_BASE_URL=https://codecov.io
 REACT_APP_MARKETING_BASE_URL=https://about.codecov.io
 REACT_APP_SENTRY_ENVIRONMENT=production
 REACT_APP_LAUNCHDARKLY=$LAUNCHDARKLY_KEY
+GENERATE_SOURCEMAP=true
