--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
   "devDependencies": {
     "@babel/core": "^7.17.8",
     "@babel/preset-typescript": "^7.21.0",
-    "@craco/craco": "^7.0.0",
+    "@craco/craco": "^7.1.0",
     "@sentry/webpack-plugin": "^1.20.0",
     "@storybook/addon-a11y": "^6.5.16",
     "@storybook/addon-actions": "^6.5.16",
@@ -100,6 +100,7 @@
     "@storybook/react": "^6.5.16",
     "@stryker-mutator/core": "^5.6.1",
     "@stryker-mutator/jest-runner": "^5.6.1",
+    "@swc/helpers": "^0.4.14",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tanstack/eslint-plugin-query": "^4.26.2",
     "@tanstack/react-query-devtools": "^4.26.1",
@@ -113,6 +114,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "autoprefixer": "^10.4.4",
+    "craco-swc": "^0.5.1",
     "eslint-config-prettier": "^8.7.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.25.4",
