Adding ability to disable ipv6 for nginx on self hosted

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -74,3 +74,23 @@ jobs:
           ENV: enterprise
         run: |-
           make push.enterprise
+          
+      
+
+  release:
+    uses: ./.github/workflows/client-release.yaml
+    with:
+      bucket: ${{ secrets.bucket_alpha }}
+      client_name: ${{ secrets.client_alpha }}
+      api_url: ${{ secrets.api_url_alpha }}
+      base_url: ${{ secrets.base_url_alpha }}
+    secrets:
+      token: ${{ secrets.GITHUB_TOKEN }}
+      gcp_sa: ${{ secrets.CODECOV_GCP_WIDSA }}
+      gcp_idp: ${{ secrets.CODECOV_GCP_WIDP }}
+    permissions:
+      pull-requests: 'write'
+      contents: 'read'
+      id-token: 'write'
+      actions: 'read'
+      repository-projects: 'read'
