Adding ability to disable ipv6 for nginx on self hosted

--- a/.github/workflows/alpha.yml
+++ b/.github/workflows/alpha.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   release:
-    uses: ./.github/workflows/client-release.yaml
+    uses: ./.github/workflows/client-release.yml
     with:
       bucket: ${{ secrets.bucket_alpha }}
       client_name: ${{ secrets.client_alpha }}
