--- a/.github/workflows/client-release.yml
+++ b/.github/workflows/client-release.yml
@@ -22,6 +22,7 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v1
         with:
           node-version: '18.8.0'
