--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "build": "craco build",
     "test": "craco test",
     "test:mutation": "npx stryker run",
-    "test:ci": "craco test --collectCoverage --reporters=default --reporters=jest-junit",
+    "test:ci": "craco test --collectCoverage --reporters=default",
     "eject": "craco eject",
     "lint": "npx eslint --fix --no-ignore --max-warnings=-1 -c .eslintrc.json 'src/**/*.{js,jsx,ts,tsx}'",
     "storybook": "start-storybook -p 6006 -s public",
@@ -120,7 +120,7 @@
     "faker": "^5.5.3",
     "http-proxy-middleware": "^2.0.6",
     "husky": "^7.0.4",
-    "jest-junit": "^13.0.0",
+    "jest": "^29.5.0",
     "lint-staged": "^13.0.3",
     "msw": "^1.1.0",
     "postcss": "^8.4.12",
