--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "test:mutation": "npx stryker run",
     "test:ci": "craco test --collectCoverage --reporters=default --reporters=jest-junit",
     "eject": "craco eject",
-    "lint": "npx eslint --fix --no-ignore --max-warnings=-1 -c .eslintrc.json 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint": "eslint --fix --no-ignore --max-warnings=-1 -c .eslintrc.json 'src/**/*.{js,jsx,ts,tsx}'",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
     "chromatic": "npx chromatic --exit-zero-on-changes -ci",
