--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@hookform/resolvers": "^2.8.5",
-    "@sentry/react": "^7.49.0",
-    "@sentry/replay": "^7.49.0",
-    "@sentry/tracing": "^7.49.0",
+    "@hookform/resolvers": "^3.1.0",
+    "@sentry/react": "^7.50.0",
+    "@sentry/replay": "^7.50.0",
+    "@sentry/tracing": "^7.50.0",
     "@stripe/react-stripe-js": "^1.7.2",
     "@stripe/stripe-js": "^1.52.1",
-    "@tanstack/react-query": "^4.29.3",
+    "@tanstack/react-query": "^4.29.5",
     "@tanstack/react-table": "^8.8.5",
     "@types/react-router-dom": "^5.3.3",
-    "classnames": "^2.3.1",
+    "classnames": "^2.3.2",
     "d3-array": "^3.2.3",
     "d3-format": "^3.1.0",
     "d3-hierarchy": "^3.1.2",
@@ -32,15 +32,14 @@
     "prism-react-renderer": "^1.3.1",
     "prop-types": "^15.8.1",
     "qs": "^6.11.1",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-ace": "^10.1.0",
     "react-datepicker": "^4.11.0",
-    "react-dom": "^17.0.2",
     "react-hook-form": "^7.43.9",
-    "react-intersection-observer": "^9.4.1",
-    "react-modal": "^3.14.4",
+    "react-intersection-observer": "^9.4.3",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^5.2.1",
-    "react-use": "^17.2.4",
+    "react-use": "^17.4.0",
     "victory": "^36.3.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11",
@@ -54,8 +53,8 @@
     "test:ci": "craco test --collectCoverage --reporters=default --reporters=jest-junit",
     "eject": "craco eject",
     "lint": "eslint --fix --no-ignore --max-warnings=-1 -c .eslintrc.json 'src/**/*.{js,jsx,ts,tsx}'",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public",
+    "storybook": "sb dev -p 6006 -s public",
+    "build-storybook": "sb build -s public",
     "chromatic": "npx chromatic --exit-zero-on-changes -ci",
     "format-staged": "npx prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md}'",
     "postinstall": "husky install",
@@ -85,49 +84,54 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
-    "@sentry/webpack-plugin": "^1.20.0",
-    "@storybook/addon-a11y": "^6.5.16",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-webpack5": "^6.5.16",
+    "@sentry/webpack-plugin": "^1.20.1",
+    "@storybook/addon-a11y": "^7.0.7",
+    "@storybook/addon-actions": "^7.0.7",
+    "@storybook/addon-essentials": "^7.0.7",
+    "@storybook/addon-links": "^7.0.7",
+    "@storybook/blocks": "^7.0.7",
+    "@storybook/builder-webpack5": "^7.0.7",
+    "@storybook/cli": "^7.0.7",
     "@storybook/manager-webpack5": "^6.5.16",
-    "@storybook/node-logger": "^6.5.16",
-    "@storybook/preset-create-react-app": "^4.1.2",
-    "@storybook/react": "^6.5.16",
-    "@stryker-mutator/core": "^5.6.1",
-    "@stryker-mutator/jest-runner": "^5.6.1",
+    "@storybook/node-logger": "^7.0.7",
+    "@storybook/preset-create-react-app": "^7.0.7",
+    "@storybook/react": "^7.0.7",
+    "@storybook/react-webpack5": "^7.0.7",
+    "@stryker-mutator/core": "^6.4.2",
+    "@stryker-mutator/jest-runner": "^6.4.2",
     "@tanstack/eslint-plugin-query": "^4.29.4",
-    "@tanstack/react-query-devtools": "^4.29.3",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.5",
-    "@testing-library/react-hooks": "^7.0.2",
+    "@tanstack/react-query-devtools": "^4.29.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
     "@total-typescript/ts-reset": "^0.4.2",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.16.0",
-    "@types/react": "^18.0.38",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-storybook": "^0.6.11",
     "eslint-plugin-tailwindcss": "^3.11.0",
     "faker": "^5.5.3",
     "http-proxy-middleware": "^2.0.6",
     "husky": "^7.0.4",
-    "jest-junit": "^13.0.0",
-    "lint-staged": "^13.2.1",
+    "jest-junit": "^16.0.0",
+    "lint-staged": "^13.2.2",
     "msw": "^1.2.1",
-    "postcss": "^8.4.12",
+    "postcss": "^8.4.23",
     "prettier": "^2.8.8",
+    "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "react-test-renderer": "^17.0.2",
+    "react-test-renderer": "^18.2.0",
     "source-map-explorer": "^2.5.3",
-    "tailwindcss": "^3.3.1",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5",
-    "webpack": "^5.80.0"
+    "webpack": "^5.81.0"
   },
   "engines": {
     "node": "18.8.0"
