--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@sentry/react": "^7.49.0",
     "@sentry/replay": "^7.49.0",
     "@sentry/tracing": "^7.49.0",
+    "@storybook/manager-api": "^7.0.7",
+    "@storybook/theming": "^7.0.7",
     "@stripe/react-stripe-js": "^1.7.2",
     "@stripe/stripe-js": "^1.52.1",
     "@tanstack/react-query": "^4.29.3",
@@ -54,8 +56,8 @@
     "test:ci": "craco test --collectCoverage --reporters=default --reporters=jest-junit",
     "eject": "craco eject",
     "lint": "eslint --fix --no-ignore --max-warnings=-1 -c .eslintrc.json 'src/**/*.{js,jsx,ts,tsx}'",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public",
+    "storybook": "storybook dev -p 6006 -s public",
+    "build-storybook": "storybook build -s public",
     "chromatic": "npx chromatic --exit-zero-on-changes -ci",
     "format-staged": "npx prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md}'",
     "postinstall": "husky install",
@@ -86,15 +88,14 @@
   "devDependencies": {
     "@craco/craco": "^7.1.0",
     "@sentry/webpack-plugin": "^1.20.0",
-    "@storybook/addon-a11y": "^6.5.16",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-webpack5": "^6.5.16",
-    "@storybook/manager-webpack5": "^6.5.16",
-    "@storybook/node-logger": "^6.5.16",
-    "@storybook/preset-create-react-app": "^4.1.2",
-    "@storybook/react": "^6.5.16",
+    "@storybook/addon-a11y": "^7.0.7",
+    "@storybook/addon-actions": "^7.0.7",
+    "@storybook/addon-essentials": "^7.0.7",
+    "@storybook/addon-links": "^7.0.7",
+    "@storybook/node-logger": "^7.0.7",
+    "@storybook/preset-create-react-app": "^7.0.7",
+    "@storybook/react": "^7.0.7",
+    "@storybook/react-webpack5": "^7.0.7",
     "@stryker-mutator/core": "^5.6.1",
     "@stryker-mutator/jest-runner": "^5.6.1",
     "@tanstack/eslint-plugin-query": "^4.29.4",
@@ -113,6 +114,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-storybook": "^0.6.11",
     "eslint-plugin-tailwindcss": "^3.11.0",
     "faker": "^5.5.3",
     "http-proxy-middleware": "^2.0.6",
@@ -125,6 +127,7 @@
     "react-scripts": "^5.0.1",
     "react-test-renderer": "^17.0.2",
     "source-map-explorer": "^2.5.3",
+    "storybook": "^7.0.7",
     "tailwindcss": "^3.3.1",
     "typescript": "^4.9.5",
     "webpack": "^5.80.0"
