--- a/.github/workflows/qa-ce01.yml
+++ b/.github/workflows/qa-ce01.yml
@@ -3,17 +3,17 @@ name: Deploy qa-ce01
 on:
   push:
     branches:
-      - qa-ce01
+      - qace01
       - main
 
 jobs:
   release:
     uses: ./.github/workflows/client-release.yml
     secrets:
-      bucket: ${{ secrets.bucket_qa-ce01 }}
-      client_name: ${{ secrets.client_qa-ce01 }}
-      api_url: ${{ secrets.api_url_qa-ce01 }}
-      base_url: ${{ secrets.base_url_qa-ce01 }}
+      bucket: ${{ secrets.bucket_qace01 }}
+      client_name: ${{ secrets.client_qace01 }}
+      api_url: ${{ secrets.api_url_qace01 }}
+      base_url: ${{ secrets.base_url_qace01 }}
       token: ${{ secrets.GITHUB_TOKEN }}
       gcp_sa: ${{ secrets.CODECOV_GCP_WIDSA }}
       gcp_idp: ${{ secrets.CODECOV_GCP_WIDP }}
