--- a/netlify.toml
+++ b/netlify.toml
@@ -9,3 +9,6 @@
   [headers.values]
     Access-Control-Allow-Origin = "events.launchdarkly.com"
     X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "same-origin"
