--- a/netlify.toml
+++ b/netlify.toml
@@ -12,5 +12,5 @@
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "same-origin"
-    Content-Security-Policy = "font-src https://fonts.googleapis.com; default-src 'self';"
+    Content-Security-Policy = "font-src https://fonts.googleapis.com; style-src-elem https://fonts.googleapis.com; default-src 'self';"
     Permissions-Policy = "accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=(), interest-cohort=()"
