adding some headers (#2065)
* adding some headers

* testing different parameters

* editing security headers

* editing security headers

* testing different parameters

* editing security headers

* editing security headers

* editing security headers

* editing security headers

* editing security headers

* editing security headers

* editing security headers

* editing security headers

* editing security headers

* editing security headers

* editing security headers

* editing security headers

* changing to self

* changing to self

* editing security headers to self

* trying something different

* reverting change

* adding geolocation

--- a/netlify.toml
+++ b/netlify.toml
@@ -12,3 +12,4 @@
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "same-origin"
+    Permissions-Policy = "accelerometer=(), camera=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=(), interest-cohort=()"
