Adding default provider to build

--- a/.github/workflows/alpha.yml
+++ b/.github/workflows/alpha.yml
@@ -14,6 +14,7 @@ jobs:
       client_name: ${{ secrets.client_alpha }}
       api_url: ${{ secrets.api_url_alpha }}
       base_url: ${{ secrets.base_url_alpha }}
+      default_provider: ${{ secrets.default_provider_alpha }}
       token: ${{ secrets.GITHUB_TOKEN }}
       gcp_sa: ${{ secrets.CODECOV_GCP_WIDSA }}
       gcp_idp: ${{ secrets.CODECOV_GCP_WIDP }}
