--- a/.github/workflows/client-release.yml
+++ b/.github/workflows/client-release.yml
@@ -15,6 +15,8 @@ on:
         required: true
       gcp_sa:
         required: true
+      default_provider:
+        required: true
       gcp_idp:
         required: true
 jobs:
@@ -49,5 +51,6 @@ jobs:
           REACT_APP_API_URL: https://${{ secrets.api_url }}
           REACT_APP_BASE_URL: https://${{ secrets.base_url }}
           REACT_APP_CE_CLIENT: ${{ secrets.client_name }}
+          REACT_APP_ENTERPRISE_DEFAULT_PROVIDER: ${{ secrets.default_provider }}
 
       - run: gsutil -m rsync -d -c -r build gs://${{ secrets.bucket }}
